{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 570,
  "lineage": "48ca55b6-b41e-11f7-48e0-90db1ce270b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myprinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae8f15ae66fe8cda",
            "arn": "arn:aws:ec2:us-east-1:026090513364:instance/i-02acc9ca809056a2f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02acc9ca809056a2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vidhan",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f0356a0ccb85c22",
            "private_dns": "ip-10-0-2-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.181",
            "public_dns": "ec2-35-175-206-140.compute-1.amazonaws.com",
            "public_ip": "35.175.206.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ffcab1bc73c54d7e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebfb93eaccd494e7",
            "tags": {
              "Name": "myprinstance"
            },
            "tags_all": {
              "Name": "myprinstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ef9206cfa59b5c3"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.webapp_pubsub2",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mypubinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae8f15ae66fe8cda",
            "arn": "arn:aws:ec2:us-east-1:026090513364:instance/i-07e5237233b7177cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e5237233b7177cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vidhan",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c6f304d3e3179f4",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-54-242-33-134.compute-1.amazonaws.com",
            "public_ip": "54.242.33.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d1d869d636b6f723",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b0bf15906a20f79",
            "tags": {
              "Name": "mypubinstance"
            },
            "tags_all": {
              "Name": "mypubinstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ef9206cfa59b5c3"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.webapp_pubsub1",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:internet-gateway/igw-056d9d639de8216d4",
            "id": "igw-056d9d639de8216d4",
            "owner_id": "026090513364",
            "tags": {
              "Name": "webapp-igw"
            },
            "tags_all": {
              "Name": "webapp-igw"
            },
            "vpc_id": "vpc-062d93555539be3eb"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:loadbalancer/app/webapp-alb/2e027e72f4a23eb4",
            "arn_suffix": "app/webapp-alb/2e027e72f4a23eb4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-alb-1748578985.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:026090513364:loadbalancer/app/webapp-alb/2e027e72f4a23eb4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03ef9206cfa59b5c3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b0bf15906a20f79"
              },
              {
                "subnet_id": "subnet-0ebfb93eaccd494e7"
              }
            ],
            "subnets": [
              "subnet-00b0bf15906a20f79",
              "subnet-0ebfb93eaccd494e7"
            ],
            "tags": {
              "Name": "webapp-alb"
            },
            "tags_all": {
              "Name": "webapp-alb"
            },
            "vpc_id": "vpc-062d93555539be3eb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.webapp_pubsub1",
            "aws_subnet.webapp_pubsub2",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:listener/app/webapp-alb/2e027e72f4a23eb4/377180c9d0e1f224",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/ca64d50a77b57c66",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026090513364:listener/app/webapp-alb/2e027e72f4a23eb4/377180c9d0e1f224",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:loadbalancer/app/webapp-alb/2e027e72f4a23eb4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp_alb",
            "aws_lb_target_group.webapp_tg",
            "aws_security_group.web_sg",
            "aws_subnet.webapp_pubsub1",
            "aws_subnet.webapp_pubsub2",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/ca64d50a77b57c66",
            "arn_suffix": "targetgroup/webapp-tg/ca64d50a77b57c66",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/ca64d50a77b57c66",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:026090513364:loadbalancer/app/webapp-alb/2e027e72f4a23eb4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-062d93555539be3eb"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webapp_tg_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/ca64d50a77b57c66-20240816170301397500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/ca64d50a77b57c66",
            "target_id": "i-07e5237233b7177cc"
          },
          "dependencies": [
            "aws_instance.mypubinstance",
            "aws_lb_target_group.webapp_tg",
            "aws_security_group.web_sg",
            "aws_subnet.webapp_pubsub1",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webapp_tg_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/ca64d50a77b57c66-20240816170302099900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/ca64d50a77b57c66",
            "target_id": "i-02acc9ca809056a2f"
          },
          "dependencies": [
            "aws_instance.myprinstance",
            "aws_lb_target_group.webapp_tg",
            "aws_security_group.web_sg",
            "aws_subnet.webapp_pubsub2",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp_pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:route-table/rtb-0a3038c5b0e5b6e4d",
            "id": "rtb-0a3038c5b0e5b6e4d",
            "owner_id": "026090513364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056d9d639de8216d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp_pub-rt"
            },
            "tags_all": {
              "Name": "webapp_pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-062d93555539be3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-igw",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp_pubrta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc16c5845c964971",
            "route_table_id": "rtb-0a3038c5b0e5b6e4d",
            "subnet_id": "subnet-00b0bf15906a20f79"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-igw",
            "aws_route_table.webapp_pub-rt",
            "aws_subnet.webapp_pubsub1",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp_pubrta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff8e05eb4fa76905",
            "route_table_id": "rtb-0a3038c5b0e5b6e4d",
            "subnet_id": "subnet-0ebfb93eaccd494e7"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-igw",
            "aws_route_table.webapp_pub-rt",
            "aws_subnet.webapp_pubsub2",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:security-group/sg-03ef9206cfa59b5c3",
            "description": "Allow SSH, HTTP, and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ef9206cfa59b5c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "026090513364",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062d93555539be3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp_pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:subnet/subnet-00b0bf15906a20f79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b0bf15906a20f79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090513364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp_pubsub1"
            },
            "tags_all": {
              "Name": "webapp_pubsub1"
            },
            "vpc_id": "vpc-062d93555539be3eb"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp_pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:subnet/subnet-0ebfb93eaccd494e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebfb93eaccd494e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090513364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp_pubsub2"
            },
            "tags_all": {
              "Name": "webapp_pubsub2"
            },
            "vpc_id": "vpc-062d93555539be3eb"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:vpc/vpc-062d93555539be3eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1b9e183f02c8c28",
            "default_route_table_id": "rtb-078a1e1ed099e6c4e",
            "default_security_group_id": "sg-0dbaac1ca58cd4c30",
            "dhcp_options_id": "dopt-0f90ffc28671bfa0e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062d93555539be3eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078a1e1ed099e6c4e",
            "owner_id": "026090513364",
            "tags": {
              "Name": "webapp"
            },
            "tags_all": {
              "Name": "webapp"
            }
          }
        }
      ]
    }
  ]
}